[package]
name = "wonder10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.8.5"
wasm-bindgen = "0.2"
async-channel = "1.8"
ulam = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
