[package]
name = "wonder10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_winit",
    "bevy_ui",
    "webgl2",
    "mp3",
] }
# bevy_egui = "*"
#bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.8"
wasm-bindgen = "0.2"
async-channel = "2.1"
ulam = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

# invoice popup
qrcode = { version = "0.12", default-features = false, features = ["svg"] }
# image = "0.23"
egui_extras = { version = "0.23", default-features = false, features = ["svg"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# egui_extras = "*"
bevy_egui = { version = "0.23", features = ["manage_clipboard"] }
# bevy_svg = { git = "https://github.com/Weasy666/bevy_svg", branch = "main" }
# qrcode-generator = "4.1.8"

# [patch.crates-io]
# bevy = { git = 'https://github.com/bevyengine/bevy.git', branch = 'main' }
# bevy_egui = { git = 'https://github.com/Vrixyz/bevy_egui', branch = 'bevy-main', features = [
#     "manage_clipboard",
# ] }

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "Window", "Navigator", "Permissions"]


[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
# strip = true
# panic = "abort"
# bevy = { version = "0.12", default-features = false, features = ["bevy_sprite", "bevy_winit", "mp3", "png", "webgl2"] }
